--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
                 </div>
                     <div class="card-box align-left">
                         <p class="mbr-text mbr-fonts-style display-7">
-                           Our web developers are included into the jury of professional niche contests. They write materials for specialized resources and give lectures on programming and app design.
+                           Our web developers are included into the jury of professional niche contests. They write materials for specialized resources like <a href="https://superbwebsitebuilders.com/adobe-muse-active-website-examples/">adobe muse examples</a> and give lectures on programming and app design.
                         </p>
                     </div>
                 </div>
