--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
                         About Us
                     </a>
                 </li><li class="nav-item"><a class="nav-link link text-white display-4" href="portfolio.html">
-                        Portfolio</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://superbwebsitebuilders.com/">
-                        Best website builders</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="portfolio.html"></a></li>
+                        Portfolio</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="portfolio.html"></a></li>
             </ul>
             
         </div>
@@ -468,7 +467,7 @@
                 </div>
                     <div class="card-box align-left">
                         <p class="mbr-text mbr-fonts-style display-7">
-                           Our web developers are included into the jury of professional niche contests. They write materials for specialized resources like <a href="https://superbwebsitebuilders.com/adobe-muse-active-website-examples/">adobe muse examples</a> and give lectures on programming and app design.
+                           Our web developers are included into the jury of professional niche contests. They write materials for specialized resources like adobe muse examples and give lectures on programming and app design.
                         </p>
                     </div>
                 </div>
@@ -655,7 +654,7 @@
             <div class="media-container-row mbr-white">
                 <div class="col-sm-6 copyright">
                     <p class="mbr-text mbr-fonts-style display-7">
-                        © 2017 mettasmartware.com - Supported by <a href="https://superbwebsitebuilders.com/attorney/">The Best Website Builders for Lawyer</a>
+                        © 2019 mettasmartware.com
                     </p>
                 </div>
                 <div class="col-md-6">
