--- a/fishapp.html
+++ b/fishapp.html
@@ -57,8 +57,7 @@
                         About Us
                     </a>
                 </li><li class="nav-item"><a class="nav-link link text-white display-4" href="portfolio.html">
-                        Portfolio</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://superbwebsitebuilders.com/">
-                        Best website builders</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="portfolio.html"></a></li>
+                        Portfolio</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="portfolio.html"></a></li>
             </ul>
             
         </div>
@@ -120,7 +119,7 @@
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © 2017 mettasmartware.com - Supported by The <a href="https://superbwebsitebuilders.com/attorney/">Best Website Builders for Lawyer</a>
+                    © 2019 mettasmartware.com
                 </p>
             </div>
         </div>
